--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -64,7 +64,7 @@
 }
 
 /*----------------------------
-      Tablet / タブレット
+    Tablet / タブレット
 ----------------------------*/
 @media screen and (max-width:1200px){
     .about_slick h4{
@@ -75,5 +75,60 @@
 @media screen and (max-width:1100px){
     .about_slick h4{
         font-size: 16px;
+    }
+}
+
+/*----------------------------
+    Mobile / スマホ
+----------------------------*/
+@media screen and (max-width:767px){
+    #about{
+        background-color: #fff;
+        padding: 60px 0;
+        background-image: url(../images/about/about_bg_sp.png);
+        background-repeat: no-repeat;
+        background-position: top 370px right 0;
+        background-size: 100vw;
+    }
+
+    .about_top {
+        background-position: top 0 left 0;
+        background-size: 20.5vw;
+        padding-bottom: 60px;
+    }
+
+    .about_top p{
+        margin-top: 34px;
+        padding: 0 20px;
+        font-size: 16px;
+        line-height: 2.1;
+    }
+
+    .about_top iframe{
+        margin-top: 34px;
+        padding: 0 20px;
+        width: 100%;
+        height: auto;
+        aspect-ratio: 350/196;
+    }
+
+    .about_bottom h3{
+        width: calc(100% - 40px);
+        font-size: 16px;
+    }
+
+    .about_slick{
+        margin-top: 34px;
+        margin-left: 20px !important;
+    }
+
+    .about_slick li{
+        width: 76.9vw !important;
+        margin: 0 10px;
+    }
+
+    .about_slick h4{
+        text-align: justify;
+        padding: 0 10px;
     }
 }
