--- a/src/assets/css/common/typography.css
+++ b/src/assets/css/common/typography.css
@@ -12,7 +12,7 @@
     font-family: 'Roboto', sans-serif;
   }
   
-  /*----------------------------
+/*----------------------------
     Font weight /フォントの太さ 
   ----------------------------*/
   .regular{
@@ -25,59 +25,9 @@
     font-weight: 700;
   }
   
-  /*----------------------------
-      Font Sizes / フォントサイズ
-    ----------------------------*/
-  .fs-11{
-    font-size: 11px;
-  }
-  .fs-14 {
-    font-size: 14px;
-  }
-  .fs-16 {
-    font-size: 16px;
-  }
-  .fs-18{
-    font-size: 18px;
-  }
-  .fs-20 {
-    font-size: 20px;
-  }
-  .fs-24 {
-    font-size: 24px;
-  }
-  .fs-25 {
-    font-size: 25px;
-  }
-  .fs-29 {
-    font-size: 29px;
-  }
-  .fs-30 {
-    font-size: 30px;
-  }
-  .fs-39 {
-    font-size: 39px;
-  }
-  .fs-55 {
-    font-size: 55px;
-  }
-  .fs-65 {
-    font-size: 65px;
-  }
-  .fs-85 {
-    font-size: 85px;
-  }
-  .fs-105 {
-    font-size: 105px;
-  }
-  .fs-136 {
-    font-size: 136px;
-  }
-  
-  /*----------------------------
+/*----------------------------
       Font Colors / フォントの色"
     ----------------------------*/
-  
   .white {
     color: #ffffff;
   }
@@ -91,21 +41,8 @@
     color: #ffff50;
   }
 
-  
-  /*---------------------------------
-    letter spacing
-  ----------------------------------*/
-  .letter-spacing-30{
-    letter-spacing: 0.06em;
-  }
-  .letter-spacing-01{
-    letter-spacing: 0.1rem;
-  }
-  .letter-spacing-02{
-    letter-spacing: 0.2rem;
-  }
-  
-  /*---------------------------------
+
+/*---------------------------------
     Section Title / セクションタイトル
   ----------------------------------*/
   .sec_title{
@@ -132,7 +69,7 @@
     margin-top: 1rem;
   }
 
-  /*---------------------------------
+/*---------------------------------
     Gradation / グラデーション
   ----------------------------------*/
   /* 背景 */
@@ -151,26 +88,20 @@
     -webkit-text-fill-color: transparent;
   }
   
-  /* ------------------- */
-  /* MOBILE              */
-  /* ------------------- */
+/* ------------------- */
+/* MOBILE              */
+/* ------------------- */
   
-  /*-------------------------------------------------
-    Section Title - Mobile/ セクションタイトル - モバイル
+/*-------------------------------------------------
+  Section Title - Mobile/ セクションタイトル - モバイル
   ---------------------------------------------------*/
   
-  @media (max-width: 767px) {
-    /* PC     -> 30px 
-     mobile -> 22px */
-    .sec_title{
-      font-size: 22px;
-      padding-bottom: 45px;
-    }
-    /* PC     -> 16px 
-     mobile -> 14px */
-    .sec_title_en {
-      font-size: 14px;
-      padding-bottom: 20px;
-    }
+@media (max-width: 767px) {
+  .sec_title{
+    font-size: 40px;
   }
-  
+  .sec_title_sub {
+    font-size: 16px;
+    margin-top: 10px
+  }
+}  
