--- a/src/assets/css/interview.css
+++ b/src/assets/css/interview.css
@@ -4,6 +4,10 @@
     position: relative;
 }
 
+.interview_title{
+    text-align: center;
+}
+
 .interview_left{
     background-color: #EBF5FF;
 }
@@ -66,7 +70,7 @@
 }
 
 .interview_item_text_qa:nth-child(3){
-    margin-top: 15px;
+    margin-top: 20px;
 }
 
 .interview_item_text_qa h4{
@@ -98,5 +102,80 @@
 @media screen and (max-width:1300px){
     #interview{
         grid-template-columns: 8vw 1fr 8vw;
+    }
+}
+
+/*---------------------------------
+    Mobile / スマホ
+----------------------------------*/
+@media screen and (max-width:767px){
+    #interview{
+        padding: 0;
+        grid-template-columns: 20px 1fr 20px;
+    }
+
+    .interview_title{
+        text-align: left;
+        padding-left: 10px;
+    }
+
+    .interview_middle{
+        padding: 60px 0;
+    }
+
+    .interview_middle:before {
+        width: 76.9%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        content: "";
+        display: block;
+        position: absolute;
+        z-index: -1;
+        background-color: #EBF5FF;
+        border-radius: 0 30px 30px 0;
+    }
+
+    .interview_item{
+        flex-direction: column;
+        margin-top: 60px;
+    }
+
+    .interview_item:nth-child(2){
+        margin-top: 34px;
+    }
+
+    .interview_item:nth-child(3) img{
+        order: -1;
+    }
+
+    .interview_item img{
+        width: 100%;
+        border-radius: 15px;
+    }
+
+    .interview_item_text{
+        margin-top: 25px;
+    }
+
+    .interview_item_text_qa{
+        padding: 30px;
+    }
+
+    .interview_item_text_qa h4{
+        font-size: 16px;
+    }
+
+    .interview_item_text_qa p{
+        margin-top: 10px;
+    }
+
+    /* Backgroung / 背景イラスト */
+    .interview_bg{
+        width: 25.6vw;
+        position: absolute;
+        top: 10px;
+        right: 0;
+        z-index: 10;
     }
 }
