--- a/src/assets/css/recruit.css
+++ b/src/assets/css/recruit.css
@@ -14,11 +14,8 @@
 
 .recruit_content table{
     width: 100%;
+    border-collapse: separate;
     border-spacing: 0 20px;
-}
-
-.recruit_content table tr{
-    margin-top: 20px;
 }
 
 .recruit_content th{
@@ -49,10 +46,49 @@
 }
 
 /*---------------------------------
-    Tablet / タブレット
+    Tablet / タブレット版
 ----------------------------------*/
 @media screen and (max-width:1100px){
     .recruit_content{
-        padding: 0 50px;
+        padding: 0 40px;
+    }
+}
+
+/*---------------------------------
+    Mobile / スマホ版
+----------------------------------*/
+@media screen and (max-width:767px){
+    #recruit{
+        padding: 60px 20px;
+    }
+
+    .recruit_content{
+        margin-top: 34px;
+        padding: 0;
+    }
+
+    .recruit_content table{
+        border-spacing: 0 15px;
+    }
+
+    .recruit_content th,
+    .recruit_content td{
+        display: block;
+        width: 100%;
+    }
+
+    .recruit_content th{
+        padding-top: 0;
+    }
+
+    .recruit_content td{
+        margin-top: 10px;
+        padding: 20px;
+    }
+
+    .table_navy_bg{
+        background-color: #292F4A;
+        margin: 15px 0;
+        padding: 0 20px 0.1em;
     }
 }
