--- a/src/assets/css/flow.css
+++ b/src/assets/css/flow.css
@@ -1,74 +1,57 @@
 #flow{
-    /* margin-bottom: 200px; */
-    /* background-color: #EBF5FF; */
-    background: linear-gradient(to bottom, #EBF5FF 90%, #fff 90%);
+  margin-top: 160px;
 }
 
-.flow_top{
-    /* background-color: #EBF5FF; */
-    /* display: grid; */
-    /* grid-template-columns: 1fr 1100px 1fr; */
-    position: relative;
-    padding: 0 8vw;
+.flow_slider{
+  display: grid;
+  grid-template-columns: 1fr 1100px 1fr;
+  grid-template-rows: 130px 1fr;
+  position: relative;
+  padding: 150px 0 120px;
 }
 
-.flow_top_middle{
+.flow_slider::after{
+  grid-column: 2/4;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: -1;
+  background-color: #EBF5FF;
+  border-radius: 50px 0 0 50px;
+}
+
+.flow_slider_top{
     display: flex;
     justify-content: space-between;
     align-items: end;
-    position: relative;
     /* padding: 150px 0 0 100px; */
-    max-width: 1100px;
-    margin: 0 auto;
-    padding-top: 150px;
+    /* max-width: 1100px; */
+    /* margin: 0 auto; */
+    grid-column: 2/3;
+    grid-row: 1/2;
+    /* padding-top: 100px; */
+    padding-left: 100px;
 }
 
-/* .flow_top_middle::before{
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    content: "";
-    display: block;
-    position: absolute;
-    z-index: -1;
-    background-color: #EBF5FF;
-    border-radius: 50px 0 0 0;
-} */
-
-.flow_top_right{
-    background-color: #EBF5FF;
-}
-
-.flow_bottom{
-    /* display: grid; */
-    /* grid-template-columns: 1fr 1100px 1f; */
-    /* position: relative; */
-    /* padding: 75px 0 150px 100px; */
-    margin-top: 70px;
-    padding: 0 8vw;
+.flow_slider_bottom{
+  /* margin: 70px 20px 0 !important; */
+  /* padding-left: 100px; */
+  /* padding-bottom: 125px; */
+  grid-column: 2/4;
+  grid-row: 2/3;
+  margin-top: 70px;
+  margin-left: 100px;
+  /* padding-bottom: 120px; */
+  overflow-x: hidden;
 }
 
 .insp-slider{
-  max-width: 1100px;
-  margin: 0 auto;
-}
-
-/* .flow_bottom::before{
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    content: "";
-    display: block;
-    position: absolute;
-    z-index: -1;
-    background-color: #EBF5FF;
-    border-radius: 50px 0 0 50px;
-} */
-
-.insp-slider{
-    /* grid-column: 2/4; */
+  margin-left: calc(-13.6vw - 20px);
+  /* width: 1000px; */
 }
 
 /*----------------------------
@@ -102,6 +85,7 @@
     display: flex;
     gap: 8px;
   }
+
   .slider-btn {
     background: transparent;
     border: none;
@@ -135,6 +119,14 @@
     padding-right: 0;
   }
   
+  .flow_slider_bottom .slick-track{
+    /* display: flex; */
+  }
+
+  .flow_slider_bottom .slick-slide {
+    /* height: auto !important; */
+  }
+  
   /*----------------------------
       Slider
       スライダー
@@ -142,6 +134,7 @@
   .card{
     border-radius: 20px;
     overflow: hidden;
+    margin: 0 20px;
   }
 
   .card_left{
@@ -165,7 +158,6 @@
 
   .card_right_step{
     display: flex;
-    /* align-items: end; */
     align-items: start;
     column-gap: 20px;
   }
@@ -184,7 +176,6 @@
     font-size: 20px;
     line-height: 1.75;
     letter-spacing: 0.08rem;
-    /* margin-bottom: 5px; */
     margin-top: 8px;
     text-align: justify;
   }
@@ -206,51 +197,19 @@
     border-radius: 5px;
     margin-top: 20px;
   }
+
   .card_right .card_right_navy p{
     margin-top: 0;
-  }
-
-  .slide_item {
-    width: 50%;
-    position: relative;
   }
   
   .card-inner {
     display: flex;
     flex-direction: row;
-    /* gap: 2px; */
-  }
-
-  .step4 .card_right_step{
-    /* align-items: start; */
-  }
-
-  .step4 .card_right h3{
-    /* margin-top: 10px; */
-    /* margin-bottom: 0; */
-    /* line-height: 1.75; */
   }
   
-  /* .slide_item p {
-    position: absolute;
-    width: 180px;
-    height: 40px;
-    top: 0px;
-    left: 0;
-    z-index: 3;
-    background-color: #ffffff;
-    clip-path: polygon(0 0, 100% 0, 74% 100%, 0 100%);
-    display: grid;
-    place-content: center;
-    letter-spacing: 2.88px;
-  } */
-  
+  .indicator:hover,
   .active {
     color: #6496DC;
-  }
-  
-  .ba_label{
-    font-size: 16px;
   }
 
 /*---------------------------------
@@ -360,9 +319,107 @@
 }
 
 @media screen and (max-width:1100px){
+  .flow_slider{
+    grid-template-columns: 40px 1fr 40px;
+  }
+
     .flow_calltoaction_content button{
         /* width: 296px; */
         /* font-size: 16px; */
         line-height: 48px;
     }
+}
+
+/*---------------------------------
+    Mobile / スマホ
+----------------------------------*/
+@media screen and (max-width:767px){
+  #flow{
+    margin-top: 0;
+  }
+  
+  .flow_slider{
+    grid-template-columns: 20px 1fr 20px;
+    grid-template-rows: 120px 1fr;
+    padding: 80px 0 60px;
+  }
+
+  .flow_slider::after{
+    width: 76.9vw;
+    border-radius: 30px 0 0 30px;
+  }
+
+  .flow_slider_top{
+    flex-direction: column;
+    padding-left: 10px;
+    align-items: start;
+  }
+
+  .slider-controls{
+    align-self: flex-end;
+  }
+
+  .indicators{
+    display: none;
+  }
+
+  .slider-buttons{
+    column-gap: 0;
+  }
+
+  .slider-btn svg{
+    width: 30px;
+    height: 30px;
+  }
+
+  .flow_slider_bottom{
+    margin-top: 20px;
+    margin-left: 0;
+  }
+
+  .card{
+    /* margin: 0 10px; */
+  }
+
+  .card-inner{
+    flex-direction: column;
+  }
+
+  .card_left,
+  .card_right{
+    width: 100%;
+  }
+
+  .card_left img{
+    aspect-ratio: 3/2;
+  }
+
+  .card_right{
+    padding: 30px 30px 50px;
+  }
+
+  .card_right_step{
+    flex-direction: column;
+  }
+
+  .card_right span{
+    font-size: 16px;
+  }
+
+  .card_right .step_number{
+    font-size: 26px;
+  }
+
+  .card_right p{
+    margin-top: 10px;
+  }
+
+  .card_right .card_right_navy{
+    margin-top: 10px;
+    width: 100%;
+  }
+
+  .card_right .card_right_navy p{
+    text-align: center;
+  }
 }
