--- a/src/assets/css/point.css
+++ b/src/assets/css/point.css
@@ -129,6 +129,10 @@
         font-size: 40px;
     }
 
+    .point_item h3{
+        letter-spacing: 0;
+    }
+
     .point_item p{
         margin-top: 30px;
     }
