--- a/src/assets/css/flow.css
+++ b/src/assets/css/flow.css
@@ -220,7 +220,7 @@
     background-image: url(../images/flow/flow_banner_bg.png);
     background-repeat: no-repeat;
     background-size: 100%;
-    /* background-position: bottom; */
+    background-position: top 0 left 0;
     position: relative;
     padding-left: 10vw;
     margin-top: 200px;
@@ -256,20 +256,13 @@
     /* font-size: 16px; */
     /* font-size: min(1.06vw, 16px); */
     font-size: 1.06vw;
-    line-height: 2.2em;
+    line-height: 2.2;
     letter-spacing: 0.05rem;
     margin-top: 1.99vw;
 }
 
 .cta_number{
     font-size: 25px;
-}
-
-.flow_calltoaction img{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 53.8vw;
 }
 
 /*----------------------------
@@ -422,4 +415,63 @@
   .card_right .card_right_navy p{
     text-align: center;
   }
+
+  /* Banner */
+  .flow_calltoaction{
+    background-image: url(../images/flow/flow_cta_bg_sp.png);
+    background-size: 100%;
+    background-position: top 20px left 0;
+    position: relative;
+    margin-top: 60px;
+    padding: 60px 0 0;
+  }
+
+  .flow_calltoaction::after{
+    background: linear-gradient(to right, #81B3E6 50%, #467DD2 100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    content: "";
+    display: block;
+  }
+
+  .flow_calltoaction_content{
+    padding: 0 20px;
+  }
+
+  .flow_calltoaction_content h3{
+    font-size: 25px;
+    letter-spacing: 0.04rem;
+    margin-left: 10px;
+  }
+
+  .flow_calltoaction_content h3:nth-child(2){
+    margin-top: 10px;
+  }
+
+  .flow_calltoaction_content p{
+    font-size: 16px;
+    line-height: 1.75;
+    margin-left: 10px;
+  }
+
+  .flow_calltoaction_content button{
+    width: 100%;
+    font-size: 20px;
+    line-height: 55px;
+    margin-top: 25px;
+  }
+
+  .flow_calltoaction_content button svg{
+    width: 9px;
+    height: 14px;
+  }
+
+  .flow_calltoaction img{
+    width: 100%;
+    margin-top: 50px;
+}
 }
