--- a/src/assets/css/flow.css
+++ b/src/assets/css/flow.css
@@ -444,6 +444,7 @@
 
   .flow_calltoaction_content h3{
     font-size: 25px;
+    font-size: 6.41vw;
     letter-spacing: 0.04rem;
     margin-left: 10px;
   }
@@ -454,15 +455,23 @@
 
   .flow_calltoaction_content p{
     font-size: 16px;
+    font-size: 4.1vw;
     line-height: 1.75;
+    margin-top: 30px;
     margin-left: 10px;
+  }
+
+  .cta_number{
+    font-size: 25px;
+    font-size: 6.41vw;
   }
 
   .flow_calltoaction_content button{
     width: 100%;
     font-size: 20px;
+    font-size: 5.13vw;
     line-height: 55px;
-    margin-top: 25px;
+    margin-top: 30px;
   }
 
   .flow_calltoaction_content button svg{
