--- a/main.css
+++ b/main.css
@@ -413,7 +413,7 @@ button.gradient-btn {
 @media screen and (max-width:767px){
     #about{
         background-color: #fff;
-        padding: 60px 0;
+        padding: 40px 0 60px;
         background-image: url(./images/about_bg_sp.png);
         background-repeat: no-repeat;
         background-position: top 370px right 0;
@@ -423,6 +423,7 @@ button.gradient-btn {
     .about_top {
         background-position: top 0 left 0;
         background-size: 20.5vw;
+        padding-top: 20px;
         padding-bottom: 60px;
     }
 
@@ -573,6 +574,7 @@ button.gradient-btn {
     .area_content .bg_gradient{
         font-size: 22px;
         margin-top: 10px;
+        letter-spacing: -0.01rem;
     }
 
     .area_content p:last-child{
@@ -1048,7 +1050,7 @@ select:focus{
     background-image: url(./images/flow_banner_bg.png);
     background-repeat: no-repeat;
     background-size: 100%;
-    /* background-position: bottom; */
+    background-position: top 0 left 0;
     position: relative;
     padding-left: 10vw;
     margin-top: 200px;
@@ -1084,20 +1086,13 @@ select:focus{
     /* font-size: 16px; */
     /* font-size: min(1.06vw, 16px); */
     font-size: 1.06vw;
-    line-height: 2.2em;
+    line-height: 2.2;
     letter-spacing: 0.05rem;
     margin-top: 1.99vw;
 }
 
 .cta_number{
     font-size: 25px;
-}
-
-.flow_calltoaction img{
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 53.8vw;
 }
 
 /*----------------------------
@@ -1250,6 +1245,74 @@ select:focus{
   .card_right .card_right_navy p{
     text-align: center;
   }
+
+  /* Banner */
+  .flow_calltoaction{
+    background-image: url(./images/flow_cta_bg_sp.png);
+    background-size: 100%;
+    background-position: top 20px left 0;
+    position: relative;
+    margin-top: 60px;
+    padding: 60px 0 0;
+  }
+
+  .flow_calltoaction::after{
+    background: linear-gradient(to right, #81B3E6 50%, #467DD2 100%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100%;
+    content: "";
+    display: block;
+  }
+
+  .flow_calltoaction_content{
+    padding: 0 20px;
+  }
+
+  .flow_calltoaction_content h3{
+    font-size: 25px;
+    font-size: 6.41vw;
+    letter-spacing: 0.04rem;
+    margin-left: 10px;
+  }
+
+  .flow_calltoaction_content h3:nth-child(2){
+    margin-top: 10px;
+  }
+
+  .flow_calltoaction_content p{
+    font-size: 16px;
+    font-size: 4.1vw;
+    line-height: 1.75;
+    margin-top: 30px;
+    margin-left: 10px;
+  }
+
+  .cta_number{
+    font-size: 25px;
+    font-size: 6.41vw;
+  }
+
+  .flow_calltoaction_content button{
+    width: 100%;
+    font-size: 20px;
+    font-size: 5.13vw;
+    line-height: 55px;
+    margin-top: 30px;
+  }
+
+  .flow_calltoaction_content button svg{
+    width: 9px;
+    height: 14px;
+  }
+
+  .flow_calltoaction img{
+    width: 100%;
+    margin-top: 50px;
+}
 }
 /*!*****************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/assets/css/footer.css ***!
@@ -1340,14 +1403,21 @@ header button:hover{
     Tablet / タブレット
 ----------------------------------*/
 @media screen and (max-width:1100px){
-  header{
-    padding-right: 50px;
-    padding-left: 50px;
-  }
-
-
   header h1{
     width: 242px;
+  }
+}
+
+/*---------------------------------
+    Tablet / タブレット
+----------------------------------*/
+@media screen and (max-width:767px){
+  header{
+    padding: 20px 20px 0;
+  }
+
+  header h1{
+    width: 157px;
   }
 }
 /*!********************************************************************************!*\
@@ -1593,6 +1663,7 @@ header button:hover{
 .keyvisual_left .ten-million{
     /* font-size: 50px; */
     font-size: 3.31vw;
+    letter-spacing: -0.02rem;
 }
 
 .keyvisual_left .comma{
@@ -1676,6 +1747,81 @@ header button:hover{
 
 #keyvisual button:hover svg .cls-1{
     fill: #30508D;
+}
+
+/*---------------------------------
+    Mobile / スマホ
+----------------------------------*/
+@media screen and (max-width:767px){
+    #keyvisual{
+        background-image: url(./images/keyvisual_bg_sp.png);
+        padding: 65px 20px 60px;
+    }
+
+    .keyvisual_content{
+        max-width: 100%;
+    }
+
+    .keyvisual_left{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .keyvisual_left img{
+        width: 66.7vw;
+        margin-left: 0;
+    }
+
+    .keyvisual_left .kevisual_img{
+        width: 100%;
+        /* margin-left: 65px; */
+        margin-top: -20px;
+    }
+
+    .keyvisual_left .keyvisual_copy{
+        font-size: 16px;
+        margin-top: -60px;
+    }
+
+    .keyvisual_left .ten-million{
+        font-size: 30px;
+        /* letter-spacing: 0; */
+    }
+
+    .keyvisual_left_point{
+        width: 100%;
+        margin-top: 20px;
+        column-gap: 7px;
+    }
+
+    .keyvisual_left_point_item{
+        padding: 10px 0 15px;
+    }
+
+    .keyvisual_left_point_item h3 .point{
+        font-size: 12px;
+    }
+
+    .keyvisual_left_point_item h3 .number{
+        font-size: 20px;
+    }
+
+    .keyvisual_left_point_item p{
+        font-size: 16px;
+    }
+
+    #keyvisual button{
+        font-size: 20px;
+        margin-top: 34px;
+    }
+
+    #keyvisual button svg{
+        width: 9px;
+        height: 14px;
+        right: 20px;
+    }
 }
 /*!*********************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./src/assets/css/navigation.css ***!
@@ -1815,6 +1961,10 @@ header button:hover{
         font-size: 40px;
     }
 
+    .point_item h3{
+        letter-spacing: 0;
+    }
+
     .point_item p{
         margin-top: 30px;
     }
@@ -1938,7 +2088,7 @@ header button:hover{
 
 .precedent_bottom_item .data{
     font-size: 16px;
-    list-style: 1.75;
+    line-height: 1.75;
     margin-top: 10px;
 }
 
@@ -2019,9 +2169,24 @@ header button:hover{
 /*---------------------------------
     Mobile / スマホ
 ----------------------------------*/
-@media screen and (max-width:1300px){
+@media screen and (max-width:767px){
     #precedent{
         grid-template-columns: 20px 1fr 20px;
+        padding-top: 60px;
+    }
+
+    .precedent_middle{
+        padding-bottom: 60px;
+    }
+
+    .precedent_middle:before{
+        width: calc(100% - 65px);
+        height: calc(100% - 40px);
+        border-radius: 30px 0 0 30px;
+    }
+
+    .precedent_right:before{
+        height: calc(100% - 40px);
     }
 
     .precedent_top{
@@ -2057,10 +2222,26 @@ header button:hover{
     .precedent_bottom{
         margin-top: 90px;
         flex-direction: column;
+        row-gap: 60px;
     }
 
     .precedent_bottom_item img{
         width: 61.5vw;
+    }
+
+    .precedent_bottom_item .salary{
+        width: 286px;
+        font-size: 20px;
+    }
+
+    .precedent_bottom_item .price{
+        font-size: 40px;
+    }
+
+    .precedent_bg_01{
+        width: 25.6vw;
+        top: 290px;
+        /* z-index: 0; */
     }
 }
 /*!******************************************************************************!*\
