--- a/main.css
+++ b/main.css
@@ -1814,6 +1814,7 @@ header button:hover{
 
     #keyvisual button{
         font-size: 20px;
+        line-height: 55px;
         margin-top: 34px;
     }
 
