--- a/src/assets/css/interview.css
+++ b/src/assets/css/interview.css
@@ -66,7 +66,7 @@
     margin-top: 25px;
     background-color: #fff;
     border-radius:20px;
-    padding: 30px 20px;
+    padding: 30px;
 }
 
 .interview_item_text_qa:nth-child(3){
