--- a/src/assets/css/navigation.css
+++ b/src/assets/css/navigation.css
@@ -88,7 +88,7 @@
     position: fixed;
     z-index: 2000; 
     width: 100%;
-    height: 100vh;/*表示する高さ*/
+    height: 100dvh;/*表示する高さ*/
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     padding: 20px;
@@ -102,11 +102,8 @@
     /*ナビゲーション天地中央揃え*/
     position: absolute;
     z-index: 2000;
-    top: 100px;
-    left: 30px;
-    /* transform: translate(-50%,-50%); */
-    /* margin-top: 60px; */
-    /* padding-left: 30px; */
+    top: 10%;
+    left: 50px;
 }
 
 #g-nav img{
@@ -137,6 +134,7 @@
 
 #g-nav li a h2{
     font-size: 25px;
+    font-size:min(6.41vw,25px);
     line-height: 1;
     letter-spacing: 0.06rem;
 }
@@ -144,6 +142,7 @@
 #g-nav li a span{
     display: block;
     font-size: 14px;
+    font-size: min(3.59vw,14px);
     line-height: 1;
     letter-spacing: 0.08rem;
 }
@@ -163,7 +162,7 @@
     line-height: 60px;
     letter-spacing: 0.11rem;
     position: relative;
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 
 #g-nav button svg{
@@ -177,4 +176,68 @@
 
 #g-nav button:hover svg .cls-1{
     fill: #30508D;
+}
+
+
+/*---------------------------------
+    PC / PC
+----------------------------------*/
+@media screen and (min-width:768px){
+    .openbtn2{
+        margin-top: 15px;
+    }
+
+    #g-nav{
+        background-image: none;
+    }
+
+    #g-nav.panelactive #g-nav-list{
+        padding: 0;
+        display: flex;
+        position: relative;
+    }
+
+    .nav_wrap{
+        /* display: flex; */
+    }
+
+    #g-nav .nav_logo{
+        width: 157px;
+        position: absolute;
+        top: 20px;
+        left: 20px;
+    }
+
+    #g-nav .nav_wrap_left{
+        width: 50vw;
+        height: 100vh;
+        object-fit: cover;
+        position: initial;
+    }
+
+    #g-nav .nav_wrap_right{
+        width: 50vw;
+        position: relative;
+    }
+
+    #g-nav ul{
+        /* position: initial; */
+        top: 50%;
+        transform: translateY(-50%);
+        left: 17.7%;
+    }
+
+    #g-nav li a h2{
+        font-size:max(1.65vw,25px);
+    }
+
+    #g-nav li a span{
+        font-size: max(0.93vw,14px);
+    }
+
+    .button_wrap{
+        bottom: 60px;
+        width: 100%;
+        padding: 0 17.7%;
+    }
 }
