タブレット調整

--- a/src/assets/css/area.css
+++ b/src/assets/css/area.css
@@ -81,6 +81,10 @@
     .area_content .bg_gradient{
         /* font-size: 24px; */
     }
+
+    .area_wrap_right{
+        top: 33%;
+    }
 }
 
 /*---------------------------------
