--- a/src/assets/css/common/reset.css
+++ b/src/assets/css/common/reset.css
@@ -45,7 +45,11 @@
    /* Set core root defaults 
          コアルートのデフォルトを設定する */
    html:focus-within {
-     scroll-behavior: smooth;
+     /* scroll-behavior: smooth; */
+   }
+
+   html{
+    scroll-behavior: smooth;
    }
    
    /* Set core body defaults 
