--- a/src/assets/css/interview.css
+++ b/src/assets/css/interview.css
@@ -107,6 +107,29 @@
     }
 }
 
+@media screen and (max-width:1100px){
+    #interview{
+        grid-template-columns: 40px 1fr 40px;
+    }
+
+    .interview_item{
+        flex-direction: column;
+        margin-top: 60px;
+    }
+
+    .interview_item img{
+        width: 100%;
+    }
+
+    .interview_item:nth-child(3) img{
+        order: -1;
+    }
+
+    .interview_item_text{
+        margin-top: 25px;
+    }
+}
+
 /*---------------------------------
     Mobile / スマホ
 ----------------------------------*/
