--- a/src/assets/css/point.css
+++ b/src/assets/css/point.css
@@ -67,9 +67,13 @@
     Tablet / タブレット
 ----------------------------------*/
 @media screen and (max-width:1100px){
+    #point{
+        padding: 140px 40px 150px;
+    }
+
     .point_content{
         max-width: 100%;
-        padding: 0 40px;
+        /* padding: 0 40px; */
     }
 
     .point_item{
