セクションタイトルのアニメーションをつけました。

--- a/src/assets/css/keyvisual.css
+++ b/src/assets/css/keyvisual.css
@@ -141,6 +141,15 @@
 }
 
 /*---------------------------------
+    Tablet / タブレット
+----------------------------------*/
+@media screen and (max-width:1100px){
+    .keyvisual_left_point{
+        column-gap: 10px;
+    }
+}
+
+/*---------------------------------
     Mobile / スマホ
 ----------------------------------*/
 @media screen and (max-width:767px){
