--- a/src/assets/css/schedule.css
+++ b/src/assets/css/schedule.css
@@ -73,6 +73,7 @@
 	margin:0 0 0 70px;
     display: flex;
     column-gap: 60px;
+    position: relative;
 }
 
 .timeline dt{
@@ -123,6 +124,10 @@
     /* transition: linear; */
 }
 
+.border-line.last {
+	top: 0;
+}
+
 /*タイムラインの見出し横の丸の位置と形状*/
 .timeline li::after{
 	content:'';
@@ -133,6 +138,7 @@
 	height: 24px;
     background-image: url(../images/schedule/timeline_circle.png);
     background-size: 100%;
+    z-index: 2;
 	/* background:#fff; */
     /* border-width: 3px; */
     /* border-style: solid; */
@@ -144,6 +150,17 @@
 .timeline li:last-child::after{
     top: initial;
     bottom: 10px;
+}
+
+.wh-mask::before{
+    content: '';
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    position: absolute;
+    bottom: -25px;
+    left: -82px;
+    z-index: 1;
 }
 
 /*---------------------------------
@@ -213,5 +230,16 @@
 
     .timeline li::after{
         top: 0;
+    }
+
+    .timeline li:last-child::after{
+        bottom: 2px;
+    }
+
+    .wh-mask::before{
+        width: 20px;
+        height: 40px;
+        bottom: -20px;
+        left: -28px;
     }
 }
