2月8日最終版

--- a/src/assets/css/area.css
+++ b/src/assets/css/area.css
@@ -17,7 +17,7 @@
     /* padding-bottom: 24%; */
 }
 
-.area_content .bg_gradient{
+.area_content .bg_gradient_text{
     font-size: 30px;
     line-height: 1;
     letter-spacing: 0.04rem;
