--- a/src/assets/css/point.css
+++ b/src/assets/css/point.css
@@ -1,10 +1,23 @@
 #point{
     padding: 140px 8vw 150px;
-    background-color: #EBF5FF;
+    /* background-color: #EBF5FF; */
     background-image: url(../images/common/slash_01.svg);
     background-repeat: no-repeat;
     background-position: top 50px right 0;
     background-size: 245px;
+    position: relative;
+}
+
+#point::before{
+    display: block;
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #EBF5FF;
+    z-index: -1;
 }
 
 .point_title{
