--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -38,7 +38,7 @@
     line-height: 1;
     letter-spacing: 0.06rem;
     border-radius: 20px;
-    padding: 0.4em 0 0.6em;
+    padding: 0.5em 0;
 }
 
 /*----------------------------
