--- a/src/assets/css/schedule.css
+++ b/src/assets/css/schedule.css
@@ -25,7 +25,7 @@
     letter-spacing: 0.06rem;
     border-radius: 20px;
     margin-top: 70px;
-    padding: 0.4em 0 0.6em;
+    padding: 0.5em 0;
 }
 
 .schedule_content iframe{
