--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -18,7 +18,7 @@ header h1{
   column-gap: 40px;
 }
 
-header button{
+header .button{
   width: 250px;
   border-radius: 25px;
   /* padding: 10px 0; */
@@ -26,9 +26,10 @@ header button{
   line-height: 50px;
   letter-spacing: 0.08rem;
   /* border: solid 1px #30508D; */
+  text-decoration: none;
 }
 
-header button:hover{
+header .button:hover{
   /* border: solid 1px #30508D; */
   outline: solid 1px #30508D;
   outline-offset: 0;
