--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -1,6 +1,6 @@
 header{
     position: fixed;
-    padding: 40px;
+    padding: 20px 40px;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -36,7 +36,7 @@ header .button:hover{
 }
 
 .header.change-color {
-  background-color: rgba(255, 255, 255, 0.8); /* スクロールしたあとのヘッダー背景色 */
+  background-color: #fff; /* スクロールしたあとのヘッダー背景色 */
   transition: 0.3s;
 }
 
@@ -59,7 +59,7 @@ header .button:hover{
 ----------------------------------*/
 @media screen and (max-width:767px){
   header{
-    padding: 20px;
+    padding: 15px 20px;
   }
 
   header h1{
