--- a/main.css
+++ b/main.css
@@ -2372,8 +2372,9 @@ footer small{
 .to-top{
     position: absolute;
     z-index: 999;
+    top: 40px;
     right: 40px;
-    bottom: 60px;
+    /* bottom: 60px; */
     width: 40px;
     height: 40px;
 }
@@ -2437,7 +2438,7 @@ footer .sample5-3:hover::after{
     }
 
     footer p{
-        font-size: 16px;
+        font-size: 14px;
     }
 
     footer img{
@@ -2446,13 +2447,13 @@ footer .sample5-3:hover::after{
 
     footer small{
         margin-top: 20px;
-        font-size: 11px;
+        font-size: 14px;
     }
 
     /* 上に戻る */
     .to-top{
         right: 20px;
-        bottom: 50px;
+        top: 15px;
         width: 30px;
         height: 30px;
     }
@@ -2471,7 +2472,7 @@ footer .sample5-3:hover::after{
     /* 固定バナー */
     footer .button_wrap{
         position: fixed;
-        bottom: 20px;
+        bottom: 14px;
         width:calc(100% - 40px);
         z-index: 999;
     }
@@ -2506,7 +2507,7 @@ footer .sample5-3:hover::after{
   \*****************************************************************************/
 header{
     position: fixed;
-    padding: 40px;
+    padding: 20px 40px;
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -2542,7 +2543,7 @@ header .button:hover{
 }
 
 .header.change-color {
-  background-color: rgba(255, 255, 255, 0.8); /* スクロールしたあとのヘッダー背景色 */
+  background-color: #fff; /* スクロールしたあとのヘッダー背景色 */
   transition: 0.3s;
 }
 
@@ -2565,7 +2566,7 @@ header .button:hover{
 ----------------------------------*/
 @media screen and (max-width:767px){
   header{
-    padding: 20px;
+    padding: 15px 20px;
   }
 
   header h1{
@@ -3023,7 +3024,7 @@ header .button:hover{
     height:14px;
     cursor: pointer;
     /* background:#fff; */
-    margin-top: 3px;
+    margin-top: 7px;
     z-index: 3000;
 }
     
@@ -3117,7 +3118,7 @@ header .button:hover{
     height: 100dvh;/*表示する高さ*/
     overflow: auto;
     -webkit-overflow-scrolling: touch;
-    padding: 20px;
+    padding: 10px 20px;
     /* display: flex; */
     /* flex-direction: column; */
     /* justify-content: space-between; */
@@ -3135,7 +3136,7 @@ header .button:hover{
 #g-nav img{
     width: 157px;
     position: absolute;
-    top: 20px;
+    top: 15px;
     left: 20px;
     /* z-index: 3000; */
 }
