--- a/main.css
+++ b/main.css
@@ -3177,7 +3177,7 @@ header .button:hover{
 /* CTA */
 .button_wrap{
     position: absolute;
-    bottom: 20px;
+    bottom: 14px !important;
     width:calc(100% - 40px);
 }
 
