--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -115,7 +115,7 @@
 
     .about_slick li{
         width: 76.9vw !important;
-        margin: 0 10px;
+        margin: 0 10px !important;
     }
 
     .about_slick h4{
