--- a/src/assets/css/navigation.css
+++ b/src/assets/css/navigation.css
@@ -161,7 +161,7 @@
 /* CTA */
 .button_wrap{
     position: absolute;
-    bottom: 20px;
+    bottom: 14px !important;
     width:calc(100% - 40px);
 }
 
