マーカーのアニメーションを調整しました。

--- a/src/assets/css/area.css
+++ b/src/assets/css/area.css
@@ -108,7 +108,7 @@
         padding: 0 10px;
     }
 
-    .area_content .bg_gradient{
+    .area_content .bg_gradient_text{
         font-size: 22px;
         margin-top: 10px;
         letter-spacing: -0.01rem;
